--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <section class="section1">
         <div class="section-1-1">
-            <img src="Images/profile.jpg" alt="Sravanthi Koppadi Profile Picture">
+            <img src="profile.jpg" alt="Sravanthi Koppadi Profile Picture">
         </div>
         <div class="section-1-2">
             <span class="section-1-2-1">"Hello, I'm"</span>
@@ -45,10 +45,10 @@
             </div>
             <div class="social-img">
                 <a href="https://www.linkedin.com/in/koppadi-sravanthi-983a75213/" target="_blank" rel="noopener noreferrer">
-                    <img id="img-1" src="Images/linkedin.png" alt="LinkedIn profile link">
+                    <img id="img-1" src="linkedin.png" alt="LinkedIn profile link">
                 </a>
                 <a href="https://github.com/20P31A0421?tab=stars" target="_blank" rel="noopener noreferrer">
-                    <img id="img-2" src="Images/github.png" alt="GitHub profile link">
+                    <img id="img-2" src="github.png" alt="GitHub profile link">
                 </a>
             </div>
         </div>
@@ -62,18 +62,18 @@
 
         <div class="section22">
             <div class="section221">
-                <img src="Images/profile.jpg" alt="Sravanthi Koppadi">
+                <img src="profile.jpg" alt="Sravanthi Koppadi">
             </div>
             <div class="section222">
                 <div class="section2221">
                     <div class="box">
-                        <img src="Images/experience.png" alt="Experience icon">
+                        <img src="experience.png" alt="Experience icon">
                         <span>Experience</span>
                         <p>TECHNICAL HUB PVT LTD - INTERN (Azure Cloud)</p>
                         <p>Naresh It - INTERN (Data Science & AI)</p>
                     </div>
                     <div class="box">
-                        <img src="Images/education.png" alt="Education icon">
+                        <img src="education.png" alt="Education icon">
                         <span>Education</span>
                         <p>Aditya College of Engineering and Technology</p>
                         <p>B.Tech in Electronics and Communication Engineering</p>
@@ -98,19 +98,19 @@
                 <span>Programming Languages</span>
                 <div class="skills">
                     <div class="skill-item">
-                        <img src="Images/checkmark.png" alt="Checkmark icon">
+                        <img src="checkmark.png" alt="Checkmark icon">
                         <div class="skill-text">
                             <span>Python</span>
                             </div>
                     </div>
                     <div class="skill-item">
-                        <img src="Images/checkmark.png" alt="Checkmark icon">
+                        <img src="checkmark.png" alt="Checkmark icon">
                         <div class="skill-text">
                             <span>SQL</span>
                         </div>
                     </div>
                     <div class="skill-item">
-                        <img src="Images/checkmark.png" alt="Checkmark icon">
+                        <img src="checkmark.png" alt="Checkmark icon">
                         <div class="skill-text">
                             <span>Data Science</span>
                         </div>
@@ -122,19 +122,19 @@
                 <span>Technologies</span>
                 <div class="skills">
                     <div class="skill-item">
-                        <img src="Images/checkmark.png" alt="Checkmark icon">
+                        <img src="checkmark.png" alt="Checkmark icon">
                         <div class="skill-text">
                             <span>Machine Learning</span>
                         </div>
                     </div>
                     <div class="skill-item">
-                        <img src="Images/checkmark.png" alt="Checkmark icon">
+                        <img src="checkmark.png" alt="Checkmark icon">
                         <div class="skill-text">
                             <span>Azure</span>
                         </div>
                     </div>
                     <div class="skill-item">
-                        <img src="Images/checkmark.png" alt="Checkmark icon">
+                        <img src="checkmark.png" alt="Checkmark icon">
                         <div class="skill-text">
                             <span>AI</span>
                         </div>
@@ -151,7 +151,7 @@
     </div>
     <div class="section42">
         <div class="section42-box1">
-            <img src="images/project1.jpg" alt="Image of a 8x8 MIMO Antenna Design for 5G Mobile Enhancement project">
+            <img src="project1.jpg" alt="Image of a 8x8 MIMO Antenna Design for 5G Mobile Enhancement project">
             <div>
                 <span class="project-title">"8x8 MIMO Antenna Design for 5G Mobile Enhancement"</span>
                 <div class="buttons">
@@ -161,7 +161,7 @@
             </div>
         </div>
         <div class="section42-box1">
-            <img src="images/project2.jpg" alt="Image of an heart Disease analysis project">
+            <img src="project2.jpg" alt="Image of an heart Disease analysis project">
             <div>
                 <span class="project-title">"Heart Disease Detection"</span>
                 <div class="buttons">
@@ -171,7 +171,7 @@
             </div>
         </div>
         <div class="section42-box1">
-            <img src="images/project3.jpg" alt="Image related to fraud detection for Bank Risk & Fraud Detection project">
+            <img src="project3.jpg" alt="Image related to fraud detection for Bank Risk & Fraud Detection project">
             <div>
                 <span class="project-title">"Bank Risk & Fraud Detection"</span>
                 <div class="buttons">
@@ -181,7 +181,7 @@
             </div>
         </div>
         <div class="section42-box1">
-            <img src="images/project4.jpg" alt="Image related to sentiment analysis for Social Media Posts project">
+            <img src="project4.jpg" alt="Image related to sentiment analysis for Social Media Posts project">
             <div>
                 <span class="project-title">"Sentiment Analysis on Social Media Posts"</span>
                 <div class="buttons">
@@ -201,11 +201,11 @@
             </div>
             <div class="section512">
                 <a class="contact-link" href="mailto:koppadisravanthi@gmail.com">
-                    <img src="Images/email.png" alt="Email icon">
+                    <img src="email.png" alt="Email icon">
                     <span>koppadisravanthi@gmail.com</span>
                 </a>
                 <a class="contact-link" href="https://www.linkedin.com/in/koppadi-sravanthi-983a75213/" target="_blank" rel="noopener noreferrer">
-                    <img src="Images/linkedin.png" alt="LinkedIn icon">
+                    <img src="linkedin.png" alt="LinkedIn icon">
                     <span>LinkedIn</span>
                 </a>
             </div>
